切换回主分支 git checkout master :crescent_moon:

--- a/index.html
+++ b/index.html
@@ -66,35 +66,21 @@
             padding: 20px;
         }
     </style>
-    <title>6city专题页2017 H6</title>
+    <title>6city 页2017</title>
     <script src="./libs/js/qrcode.js"></script>
 </head>
 
 <body>
     <h3>
-        🚀 6城 H6 专题 CDN 服务 🚀
+        🚀 6城 CDN 服务 🚀
     </h3>
-    <h5>
-        我们提供 <strong>2</strong> 种解决方案 。 异步懒加载 🚀 和 同步加载 🚅。
-    </h5>
-    <p class="color2">
-        如果希望首屏加载快 可以采用 异步懒加载, 用户浏览到哪里在去加载资源⏳。
-    </p>
-    <p class="color3">
-        如果不希望有 loading 状态, 可以采用 同步加载,但会造成首屏打开白屏状态时间长🕥,浪费带宽资源🌚
-    </p>
-    <p class="color1">
-        由于服务器 cdn 节点分布全球 🌍 唯独没有中国 🎈的节点，来自中国的访问者会有等等，敬请谅解！🤦🤦
-    </p>
+    
     <div id="container"></div>
     <div class="app">
 
         <ul class="ul">
             <li>
-                <a class="color" href="0919/" target="_blank">新手指引 🚀 异步懒加载 >></a>
-            </li>
-            <li>
-                <a href="0919/async.html" target="_blank">新手指引 🚀 同步加载 >></a>
+                <a href="1208/" target="_blank">v1 版本</a>
             </li>
         </ul>
 
