Bravery never goes out of fashion. :cow:

--- a/index.html
+++ b/index.html
@@ -87,17 +87,17 @@
     </div>
 </body>
 <script>
-    var container = document.querySelector('#container');
-    var qr = new QRCode(container, {
-        width: 200,
-        height: 200
-    });
+    // var container = document.querySelector('#container');
+    // var qr = new QRCode(container, {
+    //     width: 200,
+    //     height: 200
+    // });
 
-    var makeCode = function() {
-        var text = window.location.href;
-        qr.make(text);
-    };
-    makeCode();
+    // var makeCode = function() {
+    //     var text = window.location.href;
+    //     qr.make(text);
+    // };
+    // makeCode();
 </script>
 
 </html>
